# LabelTool

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sidewindow.py
algo/: contacts.py  modifiedlabel_pool.py
examples/: fix_over_segmentation.py  fix_under_segmentation.py
src/labeltool/: __main__.py  gui.py  merge_utils.py  segmentation.py  viz_utils.py
tests/: test_basic.py
